--- a/src/main/resources/templates/chat/main.html
+++ b/src/main/resources/templates/chat/main.html
@@ -21,17 +21,30 @@
             <option value="NORMAL">일반게임</option>
         </select>
 
-        <select name="tier" class="form-select" aria-label="Tier">
-            <option selected>티어</option>
-            <option value="BRONZE">브론즈</option>
-            <option value="SILVER">실버</option>
-            <option value="GOLD">골드</option>
-            <option value="PLATINUM">플레티넘</option>
-            <option value="EMERALD">에메랄드</option>
-            <option value="DIAMOND">다이아몬드</option>
-            <option value="MASTER">마스터</option>
-            <option value="CHALLENGER">챌린저</option>
-        </select>
+<!--        <select name="tier" class="form-select" aria-label="Tier">-->
+<!--            <option selected>티어</option>-->
+<!--            <option value="BRONZE">브론즈</option>-->
+<!--            <option value="SILVER">실버</option>-->
+<!--            <option value="GOLD">골드</option>-->
+<!--            <option value="PLATINUM">플레티넘</option>-->
+<!--            <option value="EMERALD">에메랄드</option>-->
+<!--            <option value="DIAMOND">다이아몬드</option>-->
+<!--            <option value="MASTER">마스터</option>-->
+<!--            <option value="CHALLENGER">챌린저</option>-->
+<!--        </select>-->
+
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+            <label class="form-check-label" for="flexCheckDefault">
+                Default checkbox
+            </label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
+            <label class="form-check-label" for="flexCheckChecked">
+                Checked checkbox
+            </label>
+        </div>
 
         <button>매칭하기</button>
     </form>
