--- a/src/main/resources/templates/chat/main.html
+++ b/src/main/resources/templates/chat/main.html
@@ -23,17 +23,26 @@
             <option value="NORMAL">일반게임</option>
         </select>
 
-                <select name="tier" class="form-select" aria-label="Tier">
-                    <option selected>티어</option>
-                    <option value="BRONZE">브론즈</option>
-                    <option value="SILVER">실버</option>
-                    <option value="GOLD">골드</option>
-                    <option value="PLATINUM">플레티넘</option>
-                    <option value="EMERALD">에메랄드</option>
-                    <option value="DIAMOND">다이아몬드</option>
-                    <option value="MASTER">마스터</option>
-                    <option value="CHALLENGER">챌린저</option>
-                </select>
+        <select name="tier" class="form-select" aria-label="Tier">
+            <option selected>티어</option>
+            <option value="BRONZE">브론즈</option>
+            <option value="SILVER">실버</option>
+            <option value="GOLD">골드</option>
+            <option value="PLATINUM">플레티넘</option>
+            <option value="EMERALD">에메랄드</option>
+            <option value="DIAMOND">다이아몬드</option>
+            <option value="MASTER">마스터</option>
+            <option value="CHALLENGER">챌린저</option>
+        </select>
+
+        <select name="line" class="form-select" aria-label="line">
+            <option selected>라인</option>
+            <option value="TOP">탑</option>
+            <option value="JUNGLE">정글</option>
+            <option value="MID">미드</option>
+            <option value="AD">원딜</option>
+            <option value="SUPPORTER">서폿</option>
+        </select>
 
         <div class="form-check">
             <input class="form-check-input" type="checkbox" value="0" id="top">
