--- a/src/main/resources/templates/chat/room.html
+++ b/src/main/resources/templates/chat/room.html
@@ -16,6 +16,42 @@
             height: 100vh;
             background-color: #f2f2f2;
         }
+        #outer-container {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+            align-items: center;
+            width: 100%;
+            height: 100%;
+        }
+
+        #left-container ,
+        #right-container{
+            width: 20%; /* 변경 가능한 너비 */
+            height: 90%;
+            display: flex;
+            justify-content: center; /* 수평 가운데 정렬 */
+        }
+        #center-container {
+            width: 40%; /* 변경 가능한 너비 */
+            height: 90%;
+            border: 1px solid #ccc;
+            border-radius: 10px;
+            overflow: hidden;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between; /* 위 아래 여백을 동일하게 설정 */
+        }
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f2f2f2;
+        }
         #container {
             width: 40%;
             height: 90%;
@@ -108,15 +144,30 @@
     </style>
 </head>
 <body>
-<div id="container">
-    <div id="message-area">
-        <ul id="message-list">
-            <!-- 메시지가 추가되는 부분 -->
-        </ul>
+<div id="outer-container">
+    <div id="left-container">
+        <div class="options">
+            <!-- 게임 옵션 표시 -->
+            <p>게임종류: <span id="gameType">테니스</span></p>
+            <p>게임타입: <span id="gameMode">싱글</span></p>
+            <p>구하는 라인: <span id="seekingLine">2라인</span></p>
+            <p>티어: <span id="tier">골드</span></p>
+            <p>최대 인원수: <span id="currentPlayers">5명</span></p>
+        </div>
     </div>
-    <div id="input-area">
-        <input type="text" id="msg" placeholder="메시지 입력...">
-        <button id="send-button">전송</button>
+    <div id="center-container">
+        <div id="message-area">
+            <ul id="message-list">
+                <!-- 메시지가 추가되는 부분 -->
+            </ul>
+        </div>
+        <div id="input-area">
+            <input type="text" id="msg" placeholder="메시지 입력...">
+            <button id="send-button">전송</button>
+        </div>
+    </div>
+    <div id="right-container">
+        <!-- 오른쪽 컨테이너 내용 -->
     </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
